feat: SQL using Neon

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZGVmaW5pdGUtZWFnbGUtODkuY2xlcmsuYWNjb3VudHMuZGV2JA
+DATABASE_URL = postgresql://mk_sawari_owner:aTQxrsI2P0vH@ep-weathered-bird-a11c2cgm.ap-southeast-1.aws.neon.tech/mk_sawari?sslmode=require
